# quickserveml

./: .gitignore  CLI_ENHANCEMENT_SUMMARY.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  PYPI_SETUP_GUIDE.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml  release.bat  requirements.txt  setup.cfg  test_api_endpoints.py
.github/workflows/: release.yml
examples/: comprehensive_demo.py
quickserveml/: .gitignore  README.md  batch.py  benchmark.py  cli.py  cli_utils.py  core.py  dataset.py  infer.py  model.py  pyproject.toml  registry.py  schema.py  test_model_registry.py  test_request.py
quickserveml/quickserveml/: __init__.py  cli.py  infer.py
quickserveml/templates/: serve_template.py.jinja
scripts/: release.py
templates/: serve_template.py.jinja  serve_template_basic.py.jinja
