[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickserveml"
version = "0.1.0"
description = "One-command ONNX model serving, benchmarking, and visual inspection for researchers and ML engineers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lakshminarayan Shrivas", email = "your-email@example.com"}
]
maintainers = [
    {name = "Lakshminarayan Shrivas", email = "your-email@example.com"}
]
keywords = ["onnx", "ml", "api", "fastapi", "benchmarking", "deployment", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.7"
dependencies = [
    "onnx>=1.12.0",
    "onnxruntime>=1.12.0",
    "click>=8.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=1.10.0",
    "jinja2>=3.1.0",
    "requests>=2.28.0",
    "netron>=6.0.0",
    "psutil>=5.8.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/LNSHRIVAS/quickserveml"
Documentation = "https://github.com/LNSHRIVAS/quickserveml#readme"
Repository = "https://github.com/LNSHRIVAS/quickserveml.git"
"Bug Tracker" = "https://github.com/LNSHRIVAS/quickserveml/issues"
"Source Code" = "https://github.com/LNSHRIVAS/quickserveml"

[project.scripts]
quickserveml = "quickserveml.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["quickserveml*"]

[tool.setuptools.package-data]
quickserveml = ["templates/*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=quickserveml",
    "--cov-report=term-missing",
    "--cov-report=html",
]
